--- a/About_AKO.html
+++ b/About_AKO.html
@@ -11,25 +11,52 @@
 </head>
 
 <body>
+  <script>
+	const mySettings = JSON.parse(localStorage.getItem("siteSettings"));
+  // Change Background image on load
+  if (localStorage.getItem("siteSettings") == null) {
+	  document.body.style.backgroundImage = "url('assets/Background-AKOffline-OCP.svg')";
+  } else if (mySettings[0] == "0") {
+	  // Switch to AKOffline-OCP
+	  document.body.style.backgroundImage = "url('assets/Background-AKOffline-OCP.svg')";	  
+  } else if (mySettings[0] == "1") {
+	  // Switch to AKOffline-UCP
+	  document.body.style.backgroundImage = "url('assets/Background-AKOffline-UDP.svg')";
+  } else if (mySettings[0] == "2") {
+	  // Switch to AKOffline-BDU
+	  document.body.style.backgroundImage = "url('assets/Background-AKOffline-BDU.svg')";
+  } else if (mySettings[0] == "3") {
+	  // Switch to AKOffline-UCP
+	  document.body.style.backgroundImage = "url('assets/Background-AKOffline-Yellow.svg')";
+  } else if (mySettings[0] == "4") {
+	  // Switch to AKOriginal
+	  document.body.style.backgroundImage = "url('assets/Background-AKOriginal.jpg')";
+  } else if (mySettings[0] == "5") {
+	  // Switch to AKOriginal-Alt
+	  document.body.style.backgroundImage = "url('assets/Background-AKOriginal-Alt.jpg')";
+	}
+  </script>
     <nav class="navi">
-        <a href="./index.html">AKO Cards</a>
-        <a href="./ListedLinks.html">Listed Links</a>
-        <!-- <a href="./CustomQuickLinks.html">Custom Quick Links Setup</a> -->
-        <a class="active">About AKOffline</a>
+      <a href="./index.html">AKO Cards</a>
+      <a href="./ListedLinks.html">Listed Links</a>
+      <a href="./SiteSettings.html">Site Settings</a>
+      <a class="active">About AKOffline</a>
 		<a href="https://github.com/ArchaicBubba/ArmyKnowledgeOffline" style="float: right; padding: 3px;">
-			<img src="assets/github.png" style="height:30px; width:30px;">
+		  <img src="assets/github.png" style="height:30px; width:30px;">
 		</a>
     </nav>
-  <div class="content" style="margin: 10px auto 60px;">
+  <div class="content">
     <h2>About Army Knowledge Offline</h2>
     <p class="indent">Welcome to <i>Army Knowledge Offline (AKOffline)</i>! Your go to source for any Army link found on <i>Army Knowledge Online</i>. While <b>most</b> (not ALL) links on this website link to Official U.S. Army/Military/Government websites; it is not endorsed or maintained by the U.S. Army. Most official Army and U.S. Government websites are hosted on ".mil" and ".gov" domains. I am SGT Roman Antonacci, I develop, maintain, and run AKOffline. This site is very much a work in progress as there are an oddly large amount of army websites and will likely change within the coming future as a result. For further information or questions on this please feel free to email them to <a href="mailto:info@armyknowledgeoffline.com">info@armyknowledgeoffline.com</a> or find me on global. Please note while I do not respond to every email, I do read them. Always, thank you for supporting Army Knowledge Offline. 
 	<br><br></u></b>As an effort to keep the site as transparent as possible. A link to the Github for the site is in the top right hand corner.</u></b>
 	<br><br>I will not add your website about Mesothelioma that target military veterans. Stop asking. Same with your online marketing emails. Yes, I am aware AKOffline has high bounce rate. That is kind of the point.</p>
     <hr>
     <h2>Site Updates</h2>
-  <details open><summary><i>May-17-2022</i></summary>
+	<p>All change logs have been moved to the <a href="https://github.com/ArchaicBubba/ArmyKnowledgeOffline">GitHub Page.</a></p>
+  <details><summary><i>May-17-2022</i></summary>
     <p class="indent">Modified <br> - All links are now HTTPS - New Email for site (Old one still works but will be sunset after a few months)<br> - Wording on some daily messages, Fixed flags for messages.<br> - Fixed Some cards grabing pulling full images instead of compresed version.</p><br>
     <p class="indent">Added <br> - the following sites "Aircraft and Personnel Automated Clearance System (APACS)", "Army Emergency Relief (AER)", "Defense Civilian Intelligence Personnel System (DCIPS)", "DoD CAC Cert Repository", "DoD Cyber Exchange (NIPR/Public)", "Move.mil", and "Patient Portal Tricare Online"<br> - Issues are now reported though GitHub.</p><br>
+  </details><br>
   <details><summary><i>Apr-08-2022</i></summary>
     <p class="indent">Modified <br> - All images site wise have been scaled down so that they are smaller and take up less bandwidth.<br> - Added GitHub Link on the About AKOffine page.</p><br>
     <p class="indent">Added <br> - No JavaScript mode for browsers that can't us JavaScript</p><br>
@@ -68,7 +95,7 @@
   </div>
   
   <div class="disclaimer">
-    <span><i><b>DISCLAIMER!</b></i> This is a <u>Third Party Site</u>. While <b>most</b> (not ALL) links on this website link to Official U.S. Army/Military/Government websites; it is not endorsed or maintained by the U.S. Army.<br>Have any questions or concerns about AKOffline? Email <a href="mailto:info@armyknowledgeoffline.com">info@armyknowledgeoffline.com</a> for more info!</span>
+    <span><i><b>DISCLAIMER!</b></i> This is a <u>Third Party Site</u>. It is not endorsed or maintained by the U.S. Army.<br>Have any questions or concerns about AKOffline? Email <a href="mailto:info@armyknowledgeoffline.com">info@armyknowledgeoffline.com</a> for more info!</span>
   </div>
   
 </body>
