--- a/ListedLinks.html
+++ b/ListedLinks.html
@@ -507,8 +507,8 @@
 		  <summary>• <a href="https://icamportal.us.army.mil" rel="noopener noreferrer">Identity, Credentialing and Access Management (ICAM) Portal - https://icamportal.us.army.mil</a></summary>
 		    <p>Identity, Credentialing and Access Management (ICAM) Portal provides account and group functions formerly provided by AKO Classic. The ICAM portal also provides EAMS-A information. This has replaced Identity Management (IDM) Portal.</p>
 		</details>
-		<details class="noSpacing"><!-- IgnitED - https://www.armyignited.com/app/ --> 
-		  <summary>• <a href="https://www.armyignited.com/app/" rel="noopener noreferrer">IgnitED - https://www.armyignited.com/app/</a></summary>
+		<details class="noSpacing"><!-- IgnitED - https://www.armyignited.army.mil/student --> 
+		  <summary>• <a href="https://www.armyignited.army.mil/student" rel="noopener noreferrer">IgnitED - https://www.armyignited.com/app/</a></summary>
 		    <p>ArmyIgnitED is a tailored, intuitive resource that empowers you to achieve your educational goals. Whether you’re at home or abroad, you’ll have unlimited access to educational opportunities, support, and guidance throughout your desired Education Path, Civilian Path, Credential, or Army ROTC scholarship program. Sign up for TA or CA here.</p>
 		</details>
         <details class="noSpacing"><!-- Installation Support Module - https://ism.army.mil/ism/guest/login.jsp --> 
