--- a/index.html
+++ b/index.html
@@ -1690,9 +1690,9 @@
 						</div>
 					</a>
 				</div>
-				<!-- IgnitED - https://www.armyignited.com/app/ -->
+				<!-- IgnitED - https://www.armyignited.army.mil/student -->
 				<div class="column" id="I01">
-					<a href="https://www.armyignited.com/app/" rel="noopener noreferrer" class="column hideMarquee">
+					<a href="https://www.armyignited.army.mil/student" rel="noopener noreferrer" class="column hideMarquee">
 						<div class="armyCardContainer card">
 							<div class="armyCard">
 								<div>
