--- a/About_AKO.html
+++ b/About_AKO.html
@@ -4,7 +4,7 @@
 <head>
     <link rel="icon" href="./assets/icon.png">
     <meta charset="utf-8">
-    <title>AKOffline - Listed Links</title>
+    <title>AKOffline - About AKOffline</title>
     <meta name="description" content="Army Knowledge Offline is a link hub for most U.S. Army websites. Here you are able to find quick links to easy and hard to find Army sites alike">
     <meta name="keywords" content="AKO, Army Knowledge Offline, Army Knowledge Online, ArmyKnowledgeOffline, Army Links, AKOffline, AK-Offline">
     <link rel="stylesheet" href="styles.css">
