--- a/ListedLinks.html
+++ b/ListedLinks.html
@@ -184,7 +184,7 @@
 						<p>Army 365 - PowerPoint, a presentation program, created by Robert Gaskins and Dennis Austin at a software company named Forethought, Inc. It was released on April 20, 1987, initially for Macintosh computers only. Microsoft acquired PowerPoint for about $14 million three months after it appeared.</p>
 					</details>
 					<details class='noSpacing'><!-- Army 365 - Teams - https://teams.microsoft.com/?domain_hint=army.mil -->
-						<summary>• <a href='https://teams.microsoft.com/?domain_hint=army.mil' rel='noopener noreferrer'>Army 365 - Teams - https://teams.microsoft.com/?domain_hint=army.mil</a></summary>
+						<summary>• <a href='https://dod.teams.microsoft.us/' rel='noopener noreferrer'>Army 365 - Teams - https://dod.teams.microsoft.us/</a></summary>
 						<p>Army 365, which leverages Microsoft 365 capabilities, provides the Army with an enduring capability to collaborate across the force. The system hosts a range of resources to include video and voice teleconferencing, email, instant messaging, and access to shared drives.</p>
 					</details>
 					<details class='noSpacing'><!-- Army 365 - Word - https://www.ohome.apps.mil/launch/word?domain_hint=army.mil -->
