--- a/ListedLinks.html
+++ b/ListedLinks.html
@@ -831,12 +831,8 @@
 						<summary>• <a href='https://hr.ippsa.army.mil/psc/hcpdc_newwin/EMPLOYEE/HRMS/c/IP_ORDERS_MENU.IP_ORDERS_SS.GBL' rel='noopener noreferrer'>My Orders (IPPS-A) - https://hr.ippsa.army.mil/psc/hcpdc_newwin/EMPLOYEE/HRMS/c/IP_ORDERS_MENU.IP_ORDERS_SS.GBL</a></summary>
 						<p>My Orders is where you can view your current and passed orders from IPPS-A</p>
 					</details>
-					<details class='noSpacing'><!-- My Personnal Action Request (IPPS-A) - https://hr.ippsa.army.mil/psc/hcpdc_newwin/EMPLOYEE/HRMS/c/IP_SOLDIER_DASHBOARD.IP_PF_PAR_ESS_FL.GBL -->
-						<summary>• <a href='https://hr.ippsa.army.mil/psc/hcpdc_newwin/EMPLOYEE/HRMS/c/IP_SOLDIER_DASHBOARD.IP_PF_PAR_ESS_FL.GBL' rel='noopener noreferrer'>My Personnal Action Request (IPPS-A) - https://hr.ippsa.army.mil/psc/hcpdc_newwin/EMPLOYEE/HRMS/c/IP_SOLDIER_DASHBOARD.IP_PF_PAR_ESS_FL.GBL</a></summary>
-						<p>My Personnal Action Request (IPPS-A) is where you can submit your Personnal Action Requets on IPPS-A</p>
-					</details>
 					<details class='noSpacing'><!-- My Physical Profile (IPPS-A) - https://hr.ippsa.army.mil/psc/hcpdc/EMPLOYEE/HRMS/c/IP_PHYSICAL_PROFILE.IP_PP_PHYSICAL_FL.GBL -->
-						<summary>• <a href='https://hr.ippsa.army.mil/psc/hcpdc/EMPLOYEE/HRMS/c/IP_PHYSICAL_PROFILE.IP_PP_PHYSICAL_FL.GBL' rel='noopener noreferrer'>My Physical Profile (IPPS-A) - https://hr.ippsa.army.mil/psc/hcpdc/EMPLOYEE/HRMS/c/IP_PHYSICAL_PROFILE.IP_PP_PHYSICAL_FL.GBL</a></summary>
+						<summary>• <a href='https://hr.ippsa.army.mil/psc/hcpdc_newwin/EMPLOYEE/HRMS/c/IP_SOLDIER_DASHBOARD.IP_PF_PAR_ESS_FL.GBL' rel='noopener noreferrer'>My Physical Profile (IPPS-A) - https://hr.ippsa.army.mil/psc/hcpdc/EMPLOYEE/HRMS/c/IP_PHYSICAL_PROFILE.IP_PP_PHYSICAL_FL.GBL</a></summary>
 						<p>My Physical Profile allows soldier to view their current profile online.</p>
 					</details>
 					<details class='noSpacing'><!-- My Physical Profile (IPPS-A) - https://hr.ippsa.army.mil/psc/hcpdc_newwin/EMPLOYEE/HRMS/c/IP_PHYSICAL_PROFILE.IP_PP_PHYSICAL_FL.GBL -->
