--- a/ListedLinks.html
+++ b/ListedLinks.html
@@ -331,9 +331,9 @@
 						<summary>• <a href='https://atc.us.army.mil/iastar/' rel='noopener noreferrer'>Army Training and Certification Tracking System - https://atc.us.army.mil/iastar/</a></summary>
 						<p>The Army Training and Certification Tracking System provides managers at all levels a capability to report and manage their IA Workforce and General User population training and certification statistics and a summary report of certification voucher distribution.</p>
 					</details>
-					<details class='noSpacing'><!-- Army Training Information System - https://www.atis.army.mil/Index.html -->
-						<summary>• <a href='https://www.atis.army.mil/Index.html' rel='noopener noreferrer'>Army Training Information System - https://www.atis.army.mil/Index.html</a></summary>
-						<p>The Army Training Information System is a fully automated, centralized system providing a Common Operating Picture (COP) for all Army component Soldiers, Leaders, and Civilians to plan, prepare, execute, and assess training.</p>
+					<details class='noSpacing'><!-- Army Training Information System (ATIS) - https://learn.atis.army.mil/ -->
+						<summary>• <a href='https://learn.atis.army.mil/' rel='noopener noreferrer'>Army Training Information System (ATIS) - https://learn.atis.army.mil/</a></summary>
+						<p>The Army Training Information System (ATIS) is a fully automated, centralized system providing a Common Operating Picture (COP) for all Army component Soldiers, Leaders, and Civilians to plan, prepare, execute, and assess training.</p>
 					</details>
 					<details class='noSpacing'><!-- Army Training Network - https://atn.army.mil/ -->
 						<summary>• <a href='https://atn.army.mil/' rel='noopener noreferrer'>Army Training Network - https://atn.army.mil/</a></summary>
