Synced Git with current active site when applicable. Deleted Darkmode css establisehd global veriables in styles.css and created darkmode palette. corrected typos. rearranged saveLoad.JS functions are now at the bottom of the file.

--- a/AboutAKO.html
+++ b/AboutAKO.html
@@ -8,7 +8,6 @@
   <meta name="description" content="Army Knowledge Offline is a link hub for most U.S. Army websites. Here you are able to find quick links to easy and hard to find Army sites alike">
   <meta name="keywords" content="AKO, Army Knowledge Offline, Army Knowledge Online, ArmyKnowledgeOffline, Army Links, AKOffline, AK-Offline">
   <link rel="stylesheet" href="styles.css">
-  <link rel='stylesheet' href='darkmode.css'>
   <style>
     .Sandwiched {
       display:none;
@@ -94,8 +93,10 @@
   <div class='gridLines' id="bodyGrid">
     <div class="content">
       <img src='assets/offlineLogo.png' style='min-width:125px; max-width: 30%; margin-left: auto; margin-right: auto; display:block;'>
-      <h2>About Army Knowledge Offline</h2>
-      <p class='indent'>Welcome to <i>Army Knowledge Offline (AKOffline)</i>! Your go to source for any Army link found on <i>Army Knowledge Online</i>. While <b>most</b> (not ALL) links on this website link to Official U.S. Army/Military/Government websites; it is not endorsed or maintained by the U.S. Army. Most official Army and U.S. Government websites are hosted on ".mil" and ".gov" domains. I am SSG Roman Antonacci, I develop, maintain, and run AKOffline. This site is very much a work in progress as there are an oddly large amount of Army websites and will likely change within the coming future as a result. For further information or questions on this please feel free to email them to <a href="mailto:info@akoffline.us">info@akoffline.us</a> or find me on global. Please note while I do not respond to every email, I do read them. Always, thank you for supporting Army Knowledge Offline. 
+      <h2>Notice of End of Support</h2>
+			<p class='indent'>Effective immediately I am discontinuing further support on the AKOffline codebase. This decision is born out of my impending ETS and my inability to verify current Army/Military websites as a result. The site will persist as it currently stands until March 8th 2027, at which point the site will be removed from its hosting provider and the AKOffline domains will either redirect to either Army-Links, a “competitor”, or the Archive.org version of AKOffline. If someone wishes to update my spaghetti code it is available for review on it's <a href="https://github.com/ArchaicBubba/ArmyKnowledgeOffline">github repository</a> (I am baffled by a lot of my early naming conventions desions; I'm Sorry). Upon a pull request I will review, approve the changes as applicable, and upload to the hosting provider. Thank you for using AKOffline! - Roman</p>
+			<h2>About Army Knowledge Offline</h2>
+      <p class='indent'>Welcome to <i>Army Knowledge Offline (AKOffline)</i>! Your go to source for any Army link found on <i>Army Knowledge Online</i>. While <b>most</b> (not ALL) links on this website link to Official U.S. Army/Military/Government websites; it is not endorsed or maintained by the U.S. Army. Most official Army and U.S. Government websites are hosted on ".mil" and ".gov" domains. I am Roman Antonacci, I developed and run AKOffline. This site is very much a work in progress as there are an oddly large amount of Army websites and will likely change within the coming future as a result. For further information or questions on this please feel free to email them to <a href="mailto:info@akoffline.us">info@akoffline.us</a> or find me on global. Please note while I do not respond to every email, I do read them. Always, thank you for supporting Army Knowledge Offline. 
       <hr>
       <h2>FAQs</h2>
       <details ontoggle='OCD()'><summary><i>Can I add a website to AKOffline's list of links?</i></summary>
