--- a/SiteSettings.html
+++ b/SiteSettings.html
@@ -405,7 +405,7 @@
         <div style="margin:10px;"><p>This will enable or disable Dark Mode site wide. The background setting below WILL override it. It will auto switch the background to the darkmode setting.</p><p id="DarkModeIndicator">Current Status: <red>Dark Mode Site Disabled</red></p><a onclick="toggleDarkMode()" class="link" id="DarkModeSwitch">Turn on Dark Mode</a></div><br><hr>
         <div style="margin:10px;"><p>This will change the default background. This WILL override the Dark Mode background.</p><div>
           <a class="link">Current Background
-          <select id="skin" class="dropDownBox" onchange="shiftingRealities()">
+          <select id="skin" class="dropDownBox" onchange="changeBackground()">
             <option value="0" selected="">OCP Pattern (default)</option>
             <option value="1">UCP Pattern</option>
             <option value="2">BDU Pattern</option>
